*
* 2.0-M2
*

- Fixed server hang issue on some Windows versions
- Fixed SNMPv3 communication issue with HP A series switches
- Fixed LDAP sync problems on Windows
- Russian translation improved
- New MIB added: SYMBOL-CC-WS2000-MIB
- Fixed issues: #675, #699, #716, #721, #735, #736, #737, #742, #744


*
* 2.0-M1
*

- New hook script "AcceptNewNode" (can be used as additional filter for network discovery to avoid unnecessary communications)
- SMS driver for Kannel gateway
- Oracle subagent: added parameter Oracle.CriticalStats.Deadlocks
- Reporting server improved
- Code page option added to all client command line tools (nxalarm, nxevent, nxpush, nxsms)
- New NXSL functions: GetNodeTemplates
- New parameters in Windows agent: System.Update.LastDetectTime, System.Update.LastDownloadTime, System.Update.LastInstallTime
- Network service response time can be monitored
- Added driver for HP A-series and V-series switches
- MIB compiler correctly handles REFERENCE keyword in agent capabilities section
- Oracle Tuxedo monitoring subagent
- Improved server performance with PostgreSQL
- Alias and MTU collected and stored for interfaces
- Server uses ipAddressTable and ipAddressPrefixTable to collect configured IP addresses when supported by monitored nodes
- Management console:
    - New dashboard element "DCI summary table"
    - Cluster objects shown on status maps
- Android console:
    - Added date in X axis (graphs) when the time frame is greather that one day
    - Added 10 minutes, 12 hours, 5 days, 30 days, last year options in draw graph for last values tab (5, 7, and 30 days asks for confirmation of long task execution)
    - Fixed graphical problem (checkbox) in last values tab
    - Support for KitKat Wear and Lollipop, updated support library v4
- Fixed issues: #61, #306, #381, #488, #565, #628, #634, #667, #672, #673, #674, #675, #677, #678, #679, #682, #684, #686, #688, #689, #691, #697, #698, #700, #704, #705, #709, #710, #715


*
* 1.2.17
*
